# adk-2-ae-2-as

./: .env.copy  .gitignore  .gitignore copy  CHANGELOG.md  README.md  agent_manager.py  pyproject.toml  requirements.txt  webui_agentspace_helpers.py  webui_as_authentication.py  webui_manager.py  webui_manager_snapshot.py
.gemini/: .env.copy  settings.json
agent_manager/: auth_tab.py  deploy_tab.py  deregister_tab.py  destroy_tab.py  helpers.py  register_tab.py  test_tab.py  update_tab.py
agents_gallery/basic_agent/: agent.py
agents_gallery/basic_agent_flash_lite/: .env.copy  agent.py
agents_gallery/basic_image_gen_agent/: agents.py
agents_gallery/loop_agent/: agent.py
agents_gallery/recipe_finder/: .env.copy  agent.py
agents_gallery/reddit_scout/: README.md  __init__.py  agent.py
agents_gallery/reddit_scout/utils/: constants.py
agents_gallery/search_agent/: agent.py
agents_gallery/stock_agent/: agent.py
agents_gallery/thinking_agent/: agent.py
agents_gallery/tools_agent/: .env  .env.copy  agent.py  tools.py
agents_gallery/tools_agent/tools/: tools.py
agents_gallery/unit_converter_agent/: agent.py
deployment_utils/: adc_utils.py  agentspace_lister.py  constants.py  deployment_configs.py  deployment_helpers.py
tests/agents_gallery/tools_agent/: test_tools.py
