[project]
name = "adk-samples"
version = "0.1"
description = "C-SAW Agents Template"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "python-dotenv>=1.0.1",
    "google-adk >= 1.10.0",
    "praw>=7.8.1", #for Reddit Scout
    "yfinance>=0.2.55", #for Stock Agent
    "google-cloud-aiplatform[adk,agent-engines]>=1.108.0", #for deployment scripts
    "google-cloud-secret-manager>=2.20.0", #for tools_agent and reddit_scout
    "nicegui>=2.16.0", #for web ui
    "google-api-core>=2.24.2", #for web ui helpers
    "python-jose>=3.3.0", #for web ui helpers
]

[tool.ruff.lint]
extend-select = ["E", "W", "I"]
ignore = ["E501", "W293", "E701", "E702"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
